--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <a class="minecraft-logo" href="#"></a>
       <ul class="nav-list">
-         <li><a href="#">Homepage</a></li>
+         <li><a href="#">Homepagee</a></li>
         <div class="dropdown">
           <li><a href="#">Games</a></li>
           <div class="dropdown-content">
