learning the instruction of a code

--- a/index.html
+++ b/index.html
@@ -1,54 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/projekti-praktik/style.css" />
-  </head>
-  <body>
-    <nav>
-      <a class="minecraft-logo" href="#"></a>
-      <ul class="nav-list">
-         <li><a href="#">Homepage</a></li>
-        <div class="dropdown">
-          <li><a href="#">Games</a></li>
-          <div class="dropdown-content">
-            <a href="#">minecraft</a>
-            <a href="#">minecraft dungeons</a>
-            <a href="#">minecraft legends</a>
-            <a href="#">minecraft Education</a>
-          </div>
+    <link rel="stylesheet" href="./index.css">
+</head>
+<body>
+    <header>
+        <div class="logo">
+            <img src="./assets/images/minecraft-logo.svg">
         </div>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">news</a></li>
-        <li><a href="#">support</a></li>
-      </ul>
-      <div class="search-account">
-        <div class="buy-box-btn">
-          <a href="#">buy box</a>
-        </div>
-        <div class="search"><img src="./img/search.png" alt="" /></div>
-        <div class="account">
-          <p>account</p>
-        </div>
-      </div>
-    </nav>
-    <main>
-        <img class="background-homepage" src="" alt="" />
-      <div class="homepage">
-        
-        <div class="homepage-content">
-          <h4>Special Costume Sale</h4>
-          <p>
-            Get 40% off 9 select spooky character Creator items, rotating each
-            day throughut Oct 21-Nov1. Don't forget your free jack O' Lantern
-            hat! 
-          </p>
-            <a href=""></a>
-        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
+                </li>
+                <li>
+                    <button>Buy Now > </button>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-      </div>
-    </main>
-  </body>
+</body>
 </html>
