--- a/index.html
+++ b/index.html
@@ -1,36 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./index.css">
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="logo">
-            <img src="./assets/images/minecraft-logo.svg">
-        </div>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-                <li>
-                    <a href="#">Blog</a>
-                </li>
-                <li>
-                    <button>Buy Now > </button>
-                </li>
-            </ul>
-        </nav>
+      <div class="logo">
+        <img src="/assets/images/minecraft-logo.svg" />
+      </div>
+
+      <ul>
+        <li>
+          <a href="#">loja</a>
+        </li>
+
+        <li>
+          <a href="#">shkarko</a>
+        </li>
+
+        <li>
+          <a href="#">lajme</a>
+        </li>
+
+        <li>
+          <a href="#">dyqan</a>
+        </li>
+
+        <li>
+          <a href="#">mbeshtetje</a>
+        </li>
+      </ul>
+
+      <button class="blej">blej tani</button>
+      <button class="hyr">hyr</button>
     </header>
 
-</body>
+    <main>
+      <div class="box-main">
+        <div class="left-box">
+          <h1>nderto, eksploro. mbijeto.</h1>
+          <p>
+            BllokCraft eshte nje demonstrim i frymezuar nga faqja e minecraft.
+          </p>
+          <button class="shkarko">shkarko</button>
+          <button class="shiko-lajmet">shiko-lajmet</button>
+        </div>
+
+        <div class="right-box">
+          <img src="/projekti-praktik/assets/images/box-img.jpg" />
+        </div>
+      </div>
+
+      <div class="versionet">
+        <div class="versionet-titull">
+          <h1>eksploro versionet</h1>
+          <p>kryefaqe/shkarko</p>
+        </div>
+
+        <div class="box-versionet">
+          <div class="versionet-left-box">
+            <img src="/projekti-praktik/assets/images/javaed.jpg" />
+            <h1>Minecraft</h1>
+            <p>Sandbox Survival, Adventure Single-player + Multiplayer</p>
+            <button>meso me shume</button>
+          </div>
+          <div class="versionet-mid-box">
+            <img src="/projekti-praktik/assets/images/dunged.webp" />
+            <h1>Minecraft Dungeon</h1>
+            <p>Dungeon Crawl, Action RPG Single-player + Multiplayer</p>
+            <button>meso me shume</button>
+          </div>
+          <div class="versionet-right-box">
+            <img src="/projekti-praktik/assets/images/legends.webp" />
+            <h1>Minecraft Legends</h1>
+            <p>Action RPG, Strategy Single-player + Multiplayer</p>
+            <button>meso me shume</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="lajme-njoftime-box">
+        <div class="lajme-njoftime-titull">
+          <h1>lajme dhe njoftime</h1>
+          <p>kryefaqe/lajme</p>
+        </div>
+        <div class="lajme-njoftime-left-box">
+          <img src="/projekti-praktik/assets/images/world-of-minecraft.png" />
+          <h1>perditesim: Bote te reja</h1>
+          <p>eksploro biome te gjelbra dhe struktura te reja.</p>
+          <button>lexo me shume</button>
+        </div>
+        <div class="lajme-njoftime-right-top-box">
+          <img src="/projekti-praktik/assets/images/texture-packs.jpg" />
+          <h1>pakete teksturash</h1>
+          <p>pamje te fesketa * 3 min lexim</p>
+        </div>
+        <div class="lajme-njoftime-right-bottom-box">
+          <img src="/projekti-praktik/assets/images/community.jpg" />
+          <h1>Ngjarje komuniteti</h1>
+          <p>sfide kreative * 5 min lexim</p>
+        </div>
+      </div>
+
+      <div class="video-box">
+        <video controls></video>
+      </div>
+    </main>
+    <footer>
+      <ul class="rreth-box">
+        <h1>rreth</h1>
+        <li>
+          <a href="#">ekipi</a>
+        </li>
+        <li>
+          <a href="#">karriera</a>
+        </li>
+        <li>
+          <a href="#">privatesia</a>
+        </li>
+      </ul>
+
+      <ul class="produkte-box">
+        <h1>produkte</h1>
+        <li>
+          <a href="#">Java</a>
+        </li>
+        <li>
+          <a href="#">Dungeon</a>
+        </li>
+        <li>
+          <a href="#">legends</a>
+        </li>
+      </ul>
+
+      <ul class="mbeshtetje-box">
+        <h1>mbeshtetje</h1>
+        <li>
+          <a href="#">Q&A</a>
+        </li>
+        <li>
+          <a href="#">kontakt</a>
+        </li>
+        <li>
+          <a href="#">Qendra e ndihmes</a>
+        </li>
+      </ul>
+
+      <ul class="komuniteti-box">
+        <h1>komuniteti</h1>
+        <li>
+          <a href="#">forumi</a>
+        </li>
+        <li>
+          <a href="#">Ngjarje</a>
+        </li>
+        <li>
+          <a href="#">rregullat</a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
