Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -4,37 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img src="/assets/images/minecraft-logo.svg" />
+      <nav>
+        <div class="logo">
+          <img width="100px" src="/assets/images/minecraft-logo.svg" />
+        </div>
+
+        <ul>
+          <li>
+            <a href="#">loja</a>
+          </li>
+
+          <li>
+            <a href="#">shkarko</a>
+          </li>
+
+          <li>
+            <a href="#">lajme</a>
+          </li>
+
+          <li>
+            <a href="#">dyqan</a>
+          </li>
+
+          <li>
+            <a href="#">mbeshtetje</a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="buttonWrapper">
+        <button class="blej">blej tani</button>
+        <button class="hyr">hyr</button>
       </div>
-
-      <ul>
-        <li>
-          <a href="#">loja</a>
-        </li>
-
-        <li>
-          <a href="#">shkarko</a>
-        </li>
-
-        <li>
-          <a href="#">lajme</a>
-        </li>
-
-        <li>
-          <a href="#">dyqan</a>
-        </li>
-
-        <li>
-          <a href="#">mbeshtetje</a>
-        </li>
-      </ul>
-
-      <button class="blej">blej tani</button>
-      <button class="hyr">hyr</button>
     </header>
 
     <main>
@@ -49,7 +54,7 @@
         </div>
 
         <div class="right-box">
-          <img src="/projekti-praktik/assets/images/box-img.jpg" />
+          <img src="/assets/images/box-img.jpg" />
         </div>
       </div>
 
@@ -61,19 +66,19 @@
 
         <div class="box-versionet">
           <div class="versionet-left-box">
-            <img src="/projekti-praktik/assets/images/javaed.jpg" />
+            <img src="/assets/images/javaed.jpg" />
             <h1>Minecraft</h1>
             <p>Sandbox Survival, Adventure Single-player + Multiplayer</p>
             <button>meso me shume</button>
           </div>
           <div class="versionet-mid-box">
-            <img src="/projekti-praktik/assets/images/dunged.webp" />
+            <img src="/assets/images/dunged.webp" />
             <h1>Minecraft Dungeon</h1>
             <p>Dungeon Crawl, Action RPG Single-player + Multiplayer</p>
             <button>meso me shume</button>
           </div>
           <div class="versionet-right-box">
-            <img src="/projekti-praktik/assets/images/legends.webp" />
+            <img src="/assets/images/legends.webp" />
             <h1>Minecraft Legends</h1>
             <p>Action RPG, Strategy Single-player + Multiplayer</p>
             <button>meso me shume</button>
@@ -87,18 +92,18 @@
           <p>kryefaqe/lajme</p>
         </div>
         <div class="lajme-njoftime-left-box">
-          <img src="/projekti-praktik/assets/images/world-of-minecraft.png" />
+          <img src="/assets/images/world-of-minecraft.png" />
           <h1>perditesim: Bote te reja</h1>
           <p>eksploro biome te gjelbra dhe struktura te reja.</p>
           <button>lexo me shume</button>
         </div>
         <div class="lajme-njoftime-right-top-box">
-          <img src="/projekti-praktik/assets/images/texture-packs.jpg" />
+          <img src="/assets/images/texture-packs.jpg" />
           <h1>pakete teksturash</h1>
           <p>pamje te fesketa * 3 min lexim</p>
         </div>
         <div class="lajme-njoftime-right-bottom-box">
-          <img src="/projekti-praktik/assets/images/community.jpg" />
+          <img src="/assets/images/community.jpg" />
           <h1>Ngjarje komuniteti</h1>
           <p>sfide kreative * 5 min lexim</p>
         </div>
