added background color to main wrapper and styled left box in main section

--- a/index.html
+++ b/index.html
@@ -41,78 +41,80 @@
         <button class="hyr">hyr</button>
       </div>
     </header>
-
-    <main>
-      <div class="box-main">
-        <div class="left-box">
-          <h1>nderto, eksploro. mbijeto.</h1>
-          <p>
-            BllokCraft eshte nje demonstrim i frymezuar nga faqja e minecraft.
-          </p>
-          <button class="shkarko">shkarko</button>
-          <button class="shiko-lajmet">shiko-lajmet</button>
-        </div>
-
-        <div class="right-box">
-          <img src="/assets/images/box-img.jpg" />
-        </div>
-      </div>
-
-      <div class="versionet">
-        <div class="versionet-titull">
-          <h1>eksploro versionet</h1>
-          <p>kryefaqe/shkarko</p>
-        </div>
-
-        <div class="box-versionet">
-          <div class="versionet-left-box">
-            <img src="/assets/images/javaed.jpg" />
-            <h1>Minecraft</h1>
-            <p>Sandbox Survival, Adventure Single-player + Multiplayer</p>
-            <button>meso me shume</button>
+    <div class="main-wrapper">
+      <main>
+        <div class="box-main">
+          <div class="left-box">
+            <h1>nderto, eksploro. mbijeto.</h1>
+            <p>
+              BllokCraft eshte nje demonstrim i frymezuar nga faqja e minecraft.
+            </p>
+            <button class="shkarko">shkarko</button>
+            <button class="shiko-lajmet">shiko-lajmet</button>
           </div>
-          <div class="versionet-mid-box">
-            <img src="/assets/images/dunged.webp" />
-            <h1>Minecraft Dungeon</h1>
-            <p>Dungeon Crawl, Action RPG Single-player + Multiplayer</p>
-            <button>meso me shume</button>
-          </div>
-          <div class="versionet-right-box">
-            <img src="/assets/images/legends.webp" />
-            <h1>Minecraft Legends</h1>
-            <p>Action RPG, Strategy Single-player + Multiplayer</p>
-            <button>meso me shume</button>
+
+          <div class="right-box">
+            <img src="/assets/images/box-img.jpg" />
           </div>
         </div>
-      </div>
 
-      <div class="lajme-njoftime-box">
-        <div class="lajme-njoftime-titull">
-          <h1>lajme dhe njoftime</h1>
-          <p>kryefaqe/lajme</p>
-        </div>
-        <div class="lajme-njoftime-left-box">
-          <img src="/assets/images/world-of-minecraft.png" />
-          <h1>perditesim: Bote te reja</h1>
-          <p>eksploro biome te gjelbra dhe struktura te reja.</p>
-          <button>lexo me shume</button>
-        </div>
-        <div class="lajme-njoftime-right-top-box">
-          <img src="/assets/images/texture-packs.jpg" />
-          <h1>pakete teksturash</h1>
-          <p>pamje te fesketa * 3 min lexim</p>
-        </div>
-        <div class="lajme-njoftime-right-bottom-box">
-          <img src="/assets/images/community.jpg" />
-          <h1>Ngjarje komuniteti</h1>
-          <p>sfide kreative * 5 min lexim</p>
-        </div>
-      </div>
+        <div class="versionet">
+          <div class="versionet-titull">
+            <h1>eksploro versionet</h1>
+            <p>kryefaqe/shkarko</p>
+          </div>
 
-      <div class="video-box">
-        <video controls></video>
-      </div>
-    </main>
+          <div class="box-versionet">
+            <div class="versionet-left-box">
+              <img src="/assets/images/javaed.jpg" />
+              <h1>Minecraft</h1>
+              <p>Sandbox Survival, Adventure Single-player + Multiplayer</p>
+              <button>meso me shume</button>
+            </div>
+            <div class="versionet-mid-box">
+              <img src="/assets/images/dunged.webp" />
+              <h1>Minecraft Dungeon</h1>
+              <p>Dungeon Crawl, Action RPG Single-player + Multiplayer</p>
+              <button>meso me shume</button>
+            </div>
+            <div class="versionet-right-box">
+              <img src="/assets/images/legends.webp" />
+              <h1>Minecraft Legends</h1>
+              <p>Action RPG, Strategy Single-player + Multiplayer</p>
+              <button>meso me shume</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="lajme-njoftime-box">
+          <div class="lajme-njoftime-titull">
+            <h1>lajme dhe njoftime</h1>
+            <p>kryefaqe/lajme</p>
+          </div>
+          <div class="lajme-njoftime-left-box">
+            <img src="/assets/images/world-of-minecraft.png" />
+            <h1>perditesim: Bote te reja</h1>
+            <p>eksploro biome te gjelbra dhe struktura te reja.</p>
+            <button>lexo me shume</button>
+          </div>
+          <div class="lajme-njoftime-right-top-box">
+            <img src="/assets/images/texture-packs.jpg" />
+            <h1>pakete teksturash</h1>
+            <p>pamje te fesketa * 3 min lexim</p>
+          </div>
+          <div class="lajme-njoftime-right-bottom-box">
+            <img src="/assets/images/community.jpg" />
+            <h1>Ngjarje komuniteti</h1>
+            <p>sfide kreative * 5 min lexim</p>
+          </div>
+        </div>
+
+        <div class="video-box">
+          <video controls></video>
+        </div>
+      </main>
+    </div>
+
     <footer>
       <ul class="rreth-box">
         <h1>rreth</h1>
