kam hequr nje header ekstra, kam ndryshuar classat ne html kam filluar te perdori containers si dhe kam ber disa ndryshime ne background

--- a/index.html
+++ b/index.html
@@ -8,42 +8,58 @@
   </head>
   <body>
     <header>
-      <nav>
-        <div class="logo">
-          <img width="100px" src="/assets/images/minecraft-logo.svg" />
+      <div class="container">
+        <nav>
+          <div class="logo">
+            <img width="100px" src="/assets/images/minecraft-logo.svg" />
+          </div>
+
+          <ul>
+            <li>
+              <a href="#">loja</a>
+            </li>
+
+            <li>
+              <a href="#">shkarko</a>
+            </li>
+
+            <li>
+              <a href="#">lajme</a>
+            </li>
+
+            <li>
+              <a href="#">dyqan</a>
+            </li>
+
+            <li>
+              <a href="#">mbeshtetje</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="buttonWrapper">
+          <button class="blej">blej tani</button>
+          <button class="hyr">hyr</button>
         </div>
-
-        <ul>
-          <li>
-            <a href="#">loja</a>
-          </li>
-
-          <li>
-            <a href="#">shkarko</a>
-          </li>
-
-          <li>
-            <a href="#">lajme</a>
-          </li>
-
-          <li>
-            <a href="#">dyqan</a>
-          </li>
-
-          <li>
-            <a href="#">mbeshtetje</a>
-          </li>
-        </ul>
-      </nav>
-
-      <div class="buttonWrapper">
-        <button class="blej">blej tani</button>
-        <button class="hyr">hyr</button>
       </div>
     </header>
     <div class="main-wrapper">
+      <section class="container">
+        <div class="Boxleft">
+          <div class="boxLeftContent">
+            <h1>nderto, eksploro. mbijeto.</h1>
+            <p>
+              BllokCraft eshte nje demonstrim i frymezuar nga faqja e minecraft.
+            </p>
+          </div>
+        </div>
+        <div class="BoxRight">
+          <img src="#" alt="" />
+        </div>
+      </section>
+      
       <main>
-        <div class="box-main">
+        <div class="box-main container">
           <div class="left-box">
             <h1>nderto, eksploro. mbijeto.</h1>
             <p>
@@ -64,7 +80,7 @@
             <p>kryefaqe/shkarko</p>
           </div>
 
-          <div class="box-versionet">
+          <div class="box-versionet container">
             <div class="versionet-left-box">
               <img src="/assets/images/javaed.jpg" />
               <h1>Minecraft</h1>
