kam hequr main dhe kam vendosur nje section me classen homepage

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
           <img src="#" alt="" />
         </div>
       </section>
-      
-      <main>
-        <div class="box-main container">
+
+       <section class="homepage">
+        <section class="box-main container">
           <div class="left-box">
             <h1>nderto, eksploro. mbijeto.</h1>
             <p>
@@ -72,9 +72,9 @@
           <div class="right-box">
             <img src="/assets/images/box-img.jpg" />
           </div>
-        </div>
+        </section>
 
-        <div class="versionet">
+        <section class="versionet">
           <div class="versionet-titull">
             <h1>eksploro versionet</h1>
             <p>kryefaqe/shkarko</p>
@@ -100,9 +100,9 @@
               <button>meso me shume</button>
             </div>
           </div>
-        </div>
+        </section>
 
-        <div class="lajme-njoftime-box">
+        <section class="lajme-njoftime-box">
           <div class="lajme-njoftime-titull">
             <h1>lajme dhe njoftime</h1>
             <p>kryefaqe/lajme</p>
@@ -123,12 +123,12 @@
             <h1>Ngjarje komuniteti</h1>
             <p>sfide kreative * 5 min lexim</p>
           </div>
-        </div>
+        </section>
 
-        <div class="video-box">
+        <section class="video-box">
           <video controls></video>
-        </div>
-      </main>
+        </section>
+       </section>
     </div>
 
     <footer>
