kam ndryshuar emrat e disa classev, kam rregulluar disa buttona si dhe ju kam japur nje hover

--- a/index.html
+++ b/index.html
@@ -38,38 +38,25 @@
         </nav>
 
         <div class="buttonWrapper">
-          <button class="blej">blej tani</button>
-          <button class="hyr">hyr</button>
+          <button class="btn-blej">blej tani</button>
+          <button class="btn-hyr">hyr</button>
         </div>
       </div>
     </header>
-    <div class="main-wrapper">
-      <section class="container">
-        <div class="Boxleft">
-          <div class="boxLeftContent">
-            <h1>nderto, eksploro. mbijeto.</h1>
-            <p>
-              BllokCraft eshte nje demonstrim i frymezuar nga faqja e minecraft.
-            </p>
-          </div>
-        </div>
-        <div class="BoxRight">
-          <img src="#" alt="" />
-        </div>
-      </section>
-
+    <div class="background-wrapper">
+      
        <section class="homepage">
-        <section class="box-main container">
-          <div class="left-box">
+        <section class="first-item container">
+          <div class="first-item-left-box">
             <h1>nderto, eksploro. mbijeto.</h1>
             <p>
               BllokCraft eshte nje demonstrim i frymezuar nga faqja e minecraft.
             </p>
-            <button class="shkarko">shkarko</button>
-            <button class="shiko-lajmet">shiko-lajmet</button>
+            <button class="btn-shkarko">shkarko</button>
+            <button class="btn-shiko-lajmet">shiko lajmet</button>
           </div>
 
-          <div class="right-box">
+          <div class="first-item-right-box">
             <img src="/assets/images/box-img.jpg" />
           </div>
         </section>
