kom shtu nje btn class per te gjitha buttont

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <nav>
           <div class="logo">
-            <img width="100px" src="/assets/images/minecraft-logo.svg" />
+            <img src="/assets/images/minecraft-logo.svg" />
           </div>
 
           <ul>
@@ -37,85 +37,98 @@
           </ul>
         </nav>
 
-        <div class="buttonWrapper">
-          <button class="btn-blej">blej tani</button>
-          <button class="btn-hyr">hyr</button>
+        <div class="button-wrapper">
+          <button class="btn-blej btn">blej tani</button>
+          <button class="btn-hyr btn">hyr</button>
         </div>
       </div>
     </header>
     <div class="background-wrapper">
-      
-       <section class="homepage">
-        <section class="first-item container">
+      <section class="homepage">
+        <section class="first-item-wrapper container">
           <div class="first-item-left-box">
-            <h1>nderto, eksploro. mbijeto.</h1>
+            <h1>
+              nderto, eksploro. <br />
+              mbijeto.
+            </h1>
             <p>
               BllokCraft eshte nje demonstrim i frymezuar nga faqja e minecraft.
+              Eksploro botët e tua unike, mbijeto natën dhe krijo gjithçka që
+              mund të imagjinosh!
             </p>
-            <button class="btn-shkarko">shkarko</button>
-            <button class="btn-shiko-lajmet">shiko lajmet</button>
+            <button class="btn-shkarko btn">shkarko</button>
+            <button class="btn-shiko-lajmet btn">shiko lajmet</button>
           </div>
 
           <div class="first-item-right-box">
-            <img src="/assets/images/box-img.jpg" />
+            <img
+              src="/assets/images/Minecraft_-_A_New_World-removebg-preview.png"
+            />
+            <img
+              src="/assets/images/minecraft-characters-removebg-preview.png"
+            />
           </div>
         </section>
 
-        <section class="versionet">
-          <div class="versionet-titull">
-            <h1>eksploro versionet</h1>
-            <p>kryefaqe/shkarko</p>
-          </div>
-
-          <div class="box-versionet container">
-            <div class="versionet-left-box">
-              <img src="/assets/images/javaed.jpg" />
-              <h1>Minecraft</h1>
-              <p>Sandbox Survival, Adventure Single-player + Multiplayer</p>
-              <button>meso me shume</button>
+        <div class="background-wrapper">
+          <section class="versionet-titull-wrapper">
+            <div class="versionet-titull">
+              <h1>eksploro versionet</h1>
+              <p>kryefaqe/shkarko</p>
             </div>
-            <div class="versionet-mid-box">
-              <img src="/assets/images/dunged.webp" />
-              <h1>Minecraft Dungeon</h1>
-              <p>Dungeon Crawl, Action RPG Single-player + Multiplayer</p>
-              <button>meso me shume</button>
-            </div>
-            <div class="versionet-right-box">
-              <img src="/assets/images/legends.webp" />
-              <h1>Minecraft Legends</h1>
-              <p>Action RPG, Strategy Single-player + Multiplayer</p>
-              <button>meso me shume</button>
-            </div>
-          </div>
-        </section>
+          </section>
 
-        <section class="lajme-njoftime-box">
-          <div class="lajme-njoftime-titull">
-            <h1>lajme dhe njoftime</h1>
-            <p>kryefaqe/lajme</p>
-          </div>
-          <div class="lajme-njoftime-left-box">
-            <img src="/assets/images/world-of-minecraft.png" />
-            <h1>perditesim: Bote te reja</h1>
-            <p>eksploro biome te gjelbra dhe struktura te reja.</p>
-            <button>lexo me shume</button>
-          </div>
-          <div class="lajme-njoftime-right-top-box">
-            <img src="/assets/images/texture-packs.jpg" />
-            <h1>pakete teksturash</h1>
-            <p>pamje te fesketa * 3 min lexim</p>
-          </div>
-          <div class="lajme-njoftime-right-bottom-box">
-            <img src="/assets/images/community.jpg" />
-            <h1>Ngjarje komuniteti</h1>
-            <p>sfide kreative * 5 min lexim</p>
-          </div>
-        </section>
+          <section class="versionet-wrapper">
+            <div class="box-versionet container">
+              <div class="versionet-left-box img-size">
+                <img src="/assets/images/javaed.jpg" />
+                <h1>Minecraft</h1>
+                <p>Sandbox Survival, Adventure Single-player + Multiplayer</p>
+                <button>meso me shume</button>
+              </div>
+              <div class="versionet-mid-box img-size">
+                <img src="/assets/images/dunged.webp" />
+                <h1>Minecraft Dungeon</h1>
+                <p>Dungeon Crawl, Action RPG Single-player + Multiplayer</p>
+                <button>meso me shume</button>
+              </div>
+              <div class="versionet-right-box img-size">
+                <img src="/assets/images/legends.webp" />
+                <h1>Minecraft Legends</h1>
+                <p>Action RPG, Strategy Single-player + Multiplayer</p>
+                <button>meso me shume</button>
+              </div>
+            </div>
+          </section>
 
-        <section class="video-box">
-          <video controls></video>
-        </section>
-       </section>
+          <section class="lajme-njoftime-box">
+            <div class="lajme-njoftime-titull">
+              <h1>lajme dhe njoftime</h1>
+              <p>kryefaqe/lajme</p>
+            </div>
+            <div class="lajme-njoftime-left-box">
+              <img src="/assets/images/world-of-minecraft.png" />
+              <h1>perditesim: Bote te reja</h1>
+              <p>eksploro biome te gjelbra dhe struktura te reja.</p>
+              <button>lexo me shume</button>
+            </div>
+            <div class="lajme-njoftime-right-top-box">
+              <img src="/assets/images/texture-packs.jpg" />
+              <h1>pakete teksturash</h1>
+              <p>pamje te fesketa * 3 min lexim</p>
+            </div>
+            <div class="lajme-njoftime-right-bottom-box">
+              <img src="/assets/images/community.jpg" />
+              <h1>Ngjarje komuniteti</h1>
+              <p>sfide kreative * 5 min lexim</p>
+            </div>
+          </section>
+
+          <section class="video-box">
+            <video controls></video>
+          </section>
+        </div>
+      </section>
     </div>
 
     <footer>
