changed some headings, added a class outer-footer fixed some mistakes

--- a/index.html
+++ b/index.html
@@ -82,46 +82,51 @@
             <div class="box-versionet container">
               <div class="versionet-left-box img-size">
                 <img src="/assets/images/javaed.jpg" />
-                <h1>Minecraft</h1>
+                <h3>Minecraft</h3>
                 <p>Sandbox Survival, Adventure Single-player + Multiplayer</p>
                 <button>meso me shume</button>
               </div>
               <div class="versionet-mid-box img-size">
                 <img src="/assets/images/dunged.webp" />
-                <h1>Minecraft Dungeon</h1>
+                <h3>Minecraft Dungeon</h3>
                 <p>Dungeon Crawl, Action RPG Single-player + Multiplayer</p>
                 <button>meso me shume</button>
               </div>
               <div class="versionet-right-box img-size">
                 <img src="/assets/images/legends.webp" />
-                <h1>Minecraft Legends</h1>
+                <h3>Minecraft Legends</h3>
                 <p>Action RPG, Strategy Single-player + Multiplayer</p>
                 <button>meso me shume</button>
               </div>
             </div>
           </section>
 
-          <section class="lajme-njoftime-box">
+          <section class="lajme-njoftime-titull-wrapper">
             <div class="lajme-njoftime-titull">
               <h1>lajme dhe njoftime</h1>
               <p>kryefaqe/lajme</p>
             </div>
-            <div class="lajme-njoftime-left-box">
+          </section>
+
+          <section class="lajme-njoftime-box-wrapper">
+            <div class="lajme-njoftime-left-box lajme-size-box">
               <img src="/assets/images/world-of-minecraft.png" />
-              <h1>perditesim: Bote te reja</h1>
+              <h4>perditesim: Bote te reja</h4>
               <p>eksploro biome te gjelbra dhe struktura te reja.</p>
-              <button>lexo me shume</button>
+              <button class="btn">lexo me shume</button>
             </div>
-            <div class="lajme-njoftime-right-top-box">
-              <img src="/assets/images/texture-packs.jpg" />
-              <h1>pakete teksturash</h1>
-              <p>pamje te fesketa * 3 min lexim</p>
-            </div>
-            <div class="lajme-njoftime-right-bottom-box">
-              <img src="/assets/images/community.jpg" />
-              <h1>Ngjarje komuniteti</h1>
-              <p>sfide kreative * 5 min lexim</p>
-            </div>
+            <section class="lajme-njoftime-box">
+              <div class="lajme-njoftime-right-top-box lajme-size-box">
+                <img src="/assets/images/texture-packs.jpg" />
+                <h4>pakete teksturash</h4>
+                <p>pamje te fesketa * 3 min lexim</p>
+              </div>
+              <div class="lajme-njoftime-right-bottom-box lajme-size-box">
+                <img src="/assets/images/community.jpg" />
+                <h4>Ngjarje komuniteti</h4>
+                <p>sfide kreative * 5 min lexim</p>
+              </div>
+            </section>
           </section>
 
           <section class="video-box">
@@ -133,7 +138,7 @@
 
     <footer>
       <ul class="rreth-box">
-        <h1>rreth</h1>
+        <h3>rreth</h3>
         <li>
           <a href="#">ekipi</a>
         </li>
@@ -146,7 +151,7 @@
       </ul>
 
       <ul class="produkte-box">
-        <h1>produkte</h1>
+        <h3>produkte</h3>
         <li>
           <a href="#">Java</a>
         </li>
@@ -159,7 +164,7 @@
       </ul>
 
       <ul class="mbeshtetje-box">
-        <h1>mbeshtetje</h1>
+        <h3>mbeshtetje</h3>
         <li>
           <a href="#">Q&A</a>
         </li>
@@ -172,7 +177,7 @@
       </ul>
 
       <ul class="komuniteti-box">
-        <h1>komuniteti</h1>
+        <h3>komuniteti</h3>
         <li>
           <a href="#">forumi</a>
         </li>
@@ -184,5 +189,8 @@
         </li>
       </ul>
     </footer>
+    <section class="outer-footer">
+      <p>© 2025 Minecraft. Create your own world</p>
+    </section>
   </body>
 </html>
